# persist_ser

./: .gitignore  run.sh
postupgrade/: package.yaml  postupgrade.cabal  stack.yaml
postupgrade/src/: Lib.hs  Main.hs
preupgrade/: package.yaml  preupgrade.cabal  stack.yaml
preupgrade/src/: Lib.hs  Main.hs
